# OVBOS

./: Cargo.toml  README.md  x86_64-ovbos.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  print.rs  serial.rs  vga.rs  vga_buffer.rs
tests/: boot.rs  bubble_sort.rs  int3.rs  page_fault.rs  stack_overflow.rs
