[package]
name = "ovbos"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]